# procrastinate

./: .gitmodules  Cargo.toml  http-async
source/: cli.rs  hyper.rs  lib.rs  service.rs  socket.rs  web.rs
source/http/: method.rs  mod.rs  request.rs  response.rs  status.rs  version.rs
source/socket/: mod.rs  old.rs
source/this/: calendar.rs  control.rs  credit.rs  mod.rs  proof.rs  tasks.rs  teams.rs  users.rs
source/web/: calendar.rs  frontend.rs  index.rs  mod.rs  page404.rs
source/web/assets/: calendar.css  common.css  navigation.css
