[package]
name                                    =   "procrastinator"
description                             =   "Helps getting things done with ToDo-Lists, Calendar, Bucket-Lists, … and some gamification."
version                                 =   "0.1.0"
authors                                 =   [
                                              "Sebastian Walz <sivizius@ohai.su>",
                                            ]
edition                                 =   "2018"
license                                 =   "MIT"
repository                              =   "https://github.com/sivizius/procrastinator"

[dependencies]
async-std                               =   "1.4"
indoc                                   =   "0.3"
ron                                     =   "0.5"
serde                                   =   "1.0"
serde_json                              =   "1.0"
typed-html                              =   "0.2"

[lib]
path                                    =   "source/lib.rs"

[[bin]]
name                                    =   "service"
path                                    =   "source/service.rs"

[[bin]]
name                                    =   "cli"
path                                    =   "source/cli.rs"
